# customers-balance

./: .gitignore  README.md  djlint.toml  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.js
apps/balance/: apps.py
apps/balance/admin/: __init__.py  customer.py  transaction.py
apps/balance/filters/: __init__.py  customer.py
apps/balance/forms/: __init__.py  customer.py  transaction.py
apps/balance/managers/: __init__.py  customer.py  transaction.py
apps/balance/migrations/: 0001_initial.py  0002_transaction_amount_alter_transaction_uuid.py  0003_alter_transaction_options_alter_customer_mobile.py
apps/balance/models/: __init__.py  customer.py  transaction.py
apps/balance/services/: __init__.py  customer.py  transaction.py
apps/balance/urls/: __init__.py  customer.py  transaction.py
apps/balance/views/: customer.py  transaction.py
apps/core/: admin.py  dbfields.py  filters.py  protocols.py  services.py  signals.py  utils.py  validators.py
apps/core/migrations/: 0001_initial.py  0002_activity.py  0003_alter_activity_options_alter_activity_notes.py
apps/core/mixins/: __init__.py  filter.py  template.py  utils.py
apps/core/models/: __init__.py  abstract.py  activity.py
apps/core/views/: __init__.py  (+2 more)
assets/: main.ts  style.css
assets/data/: index.ts  types.ts
project/: urls.py
project/settings/: base.py  dep.py  dev.py  testing.py
scripts/: transactions_init.py
templates/cotton/: boolean.html  button.html  head.html  header.html  layout.html  reload_on_duplicate.html  spinner.html
(+34 files in other folders)
